--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -8,7 +8,7 @@
     android:gravity="center"
     tools:context=".Main2Activity">
 
-    <com.zhoux.view.CircularProgressView
+    <com.zhoux.view.CircularProgressViewKt
         android:id="@+id/CircularProgressView"
         android:layout_width="114dp"
         android:layout_height="114dp"
