新增线型进度条

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,6 +7,8 @@
 
     <color name="color_c1">#FFFFA726</color>
     <color name="colorPrimaryDark">#2ACAE6</color>
+    <color name="color_ff3dacb7">#ff3dacb7</color>
+    <color name="color_663dacb7">#663dacb7</color>
 
     <color name="color_c12">#FF3EA0F3</color>
     <color name="color_c15">#FF757575</color>
