--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -25,4 +25,12 @@
         <attr name="waveSpeed" format="integer" />     <!--波形播放速度-->
         <attr name="waveRectCount" format="integer" />     <!--波形数量-->
     </declare-styleable>
+
+    <declare-styleable name="LineProgressView">
+        <attr name="widh" format="dimension" />       <!--波形宽度-->
+        <attr name="height" format="dimension" />  <!--波形高度-->
+        <attr name="radius" format="dimension" />
+        <attr name="offset" format="dimension" />
+        <attr name="count" format="integer" />
+    </declare-styleable>
 </resources>
