--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -1,12 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical"
     android:gravity="center"
+    android:orientation="vertical"
     tools:context=".Main2Activity">
+    <Button
+        android:id="@+id/btnChange"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="改变"/>
 
     <com.zhoux.view.CircularProgressViewKt
         android:id="@+id/CircularProgressView"
@@ -15,9 +20,19 @@
         android:layout_margin="10dp"
         app:backColor="@color/color_dadada"
         app:backWidth="6dp"
-        app:progStartColor="#2ACAE6"
         app:progFirstColor="#17D1A5"
+        app:progStartColor="#2ACAE6"
         app:progWidth="6dp"
         app:progress="65" />
+
+    <com.zhoux.view.LineProgressViewKt
+        android:id="@+id/LineProgressViewKt"
+        android:layout_width="match_parent"
+        android:layout_height="10dp"
+        android:layout_marginTop="10dp"
+        app:progFirstColor="#17D1A5"
+        app:progStartColor="#2ACAE6"/>
+
+
 
 </LinearLayout>
